chore(logstash): fixe JVM options Xmx,Xms,G1GC